2015-03-22  Dmitry Gutov  <dgutov@yandex.ru>

	* automated/json-tests.el: New file.

2015-03-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* automated/eieio-tests.el (eieio-test-17-virtual-slot): Don't use
	initarg in `oset'.
	(eieio-test-32-slot-attribute-override-2): Adjust to new
	slot representation.

	* automated/eieio-test-persist.el (persist-test-save-and-compare):
	Adjust to new slot representation.

	* automated/eieio-test-methodinvoke.el (make-instance): Use new-style
	`subclass' specializer for a change.

2015-03-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* automated/cl-lib-tests.el: Use lexical-binding.
	(cl-lib-arglist-performance): Refine test to the case where one of the
	fields has a non-nil default value.  Use existing `mystruct' defstruct.
	(cl-lib-struct-accessors): Use `pcase' to be a bit more flexible in the
	accepted outputs.

2015-03-16  Ken Brown  <kbrown@cornell.edu>

	* automated/tramp-tests.el (tramp--test-special-characters):
	Don't test "\t" in file names on Cygwin.  (Bug#20119)

2015-03-10  Jackson Ray Hamilton  <jackson@jacksonrayhamilton.com>

	* indent/js-indent-init-dynamic.js: Fix spelling error.

2015-03-10  Paul Eggert  <eggert@cs.ucla.edu>

	Prefer "initialize" to "initialise"
	* indent/js-indent-init-t.js: Rename from
	indent/js-indent-first-initialiser-t.js.
	* indent/js-indent-init-dynamic.js: Rename from
	test/indent/js-indent-first-initialiser-dynamic.js.

2015-03-10  Jackson Ray Hamilton  <jackson@jacksonrayhamilton.com>

	* indent/js.js: Add local variables.

	* indent/js-indent-first-initialiser-t.js:
	* indent/js-indent-first-initialiser-dynamic.js:
	New tests for `js-indent-first-initialiser'.

2015-03-10  Przemyslaw Wojnowski  <esperanto@cumego.com>

	* automated/cl-lib-tests.el: Add tests for plusp, second, ...
	(cl-lib-test-plusp, cl-lib-test-minusp)
	(cl-lib-test-oddp, cl-lib-test-evenp, cl-lib-test-first)
	(cl-lib-test-second, cl-lib-test-third, cl-lib-test-fourth)